added ``rock_linked_list_node`` type in order to form circular doubly linked lists.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.22)
-project(aquarium-rock VERSION 3.0.0
+project(aquarium-rock VERSION 3.1.0
         LANGUAGES C
         DESCRIPTION "Data structures in C")
 
@@ -16,6 +16,7 @@ set(EXPORTED_HEADER_FILES
         include/rock/array.h
         include/rock/error.h
         include/rock/hash_table.h
+        include/rock/linked_list.h
         include/rock/red_black_tree.h
         include/rock/red_black_tree_map.h
         include/rock/red_black_tree_set.h
@@ -28,6 +29,7 @@ set(SOURCES
         src/array.c
         src/error.c
         src/hash_table.c
+        src/linked_list.c
         src/red_black_tree.c
         src/red_black_tree_map.c
         src/red_black_tree_set.c
@@ -120,6 +122,17 @@ if(CMAKE_BUILD_TYPE STREQUAL "Debug")
                 ${PROJECT_NAME})
     add_test(${PROJECT_NAME}-hash-table-unit-test
             ${PROJECT_NAME}-hash-table-unit-test)
+    # aquarium-linked-list-unit-test
+    add_executable(${PROJECT_NAME}-linked-list-unit-test
+            test/test_linked_list.c)
+    target_include_directories(${PROJECT_NAME}-linked-list-unit-test
+            PRIVATE
+                "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/src>")
+    target_link_libraries(${PROJECT_NAME}-linked-list-unit-test
+            PRIVATE
+                ${PROJECT_NAME})
+    add_test(${PROJECT_NAME}-linked-list-unit-test
+            ${PROJECT_NAME}-linked-list-unit-test)
 else()
     add_library(${PROJECT_NAME} "")
     target_sources(${PROJECT_NAME}
