--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,7 @@ if(DOXYGEN_FOUND)
 endif()
 
 if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+    include(CTest)
     include(cmake/FetchCMocka.cmake)
     add_library(${PROJECT_NAME} STATIC "")
     add_compile_definitions(TEST)
